--- a/index.html
+++ b/index.html
@@ -42,40 +42,40 @@
     <!-- ! section -->
     <h1 class="text-4xl pt-8 py-4 pl-6 lg:pl-9">Products</h1>
     <div
-      class="grid md:grid-cols-2 lg:grid-cols-3 pt-6 gap-4 md:gap-6 lg:gap-8 justify-items-center lg:px-6 pb-[4rem]"
+      class="grid md:grid-cols-2 lg:grid-cols-3 pt-6 gap-4 md:gap-8 lg:gap-10 justify-items-center px-6 pb-[4rem]"
     >
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
       <div
-        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[420px] lg:h-[350px]"
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
       >
         x
       </div>
