--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
       >
         x
       </div>
+      <div
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
+      >
+        x
+      </div>
+      <div
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
+      >
+        x
+      </div>
+      <div
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
+      >
+        x
+      </div>
+      <div
+        class="flex bg-blue-200 justify-center items-center w-[350px] h-[250px] lg:w-[320px] xl:w-[400px] lg:h-[350px]"
+      >
+        x
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
